add design on input field

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
       <div>
         <h3 class="foot-title dark-1">Let’s Inbox Me</h3>
         <form action="">
-          <input type="text" name="" id="" placeholder="Your Name">
-          <input type="email" name="" id="" placeholder="Your Email">
+          <input type="text" name="" id="" placeholder="Your Name" required>
+          <input type="email" name="" id="" placeholder="Your Email" required>
           <textarea name="" id="" cols="30" rows="10" placeholder="Please Send Your Feedback Here "></textarea>
           <input class="btn-primary" type="submit" value="Submit">
         </form>
