add the final version of respnsive for mobile device

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="https://kit.fontawesome.com/ef45f973ec.js" crossorigin="anonymous"></script>
   </head>
   <body class="open-sans-normal">
-    <!-- Header part are there  -->
-    <header class="Top-banner mainclass hide">
+ <!-- Header part are there  -->
+    <header class="Top-banner mainclass">
       <nav>
         <h3 class="nav-title">Sa<span style="color: #FD6E0A;">bb</span>ir</h3>
         <ul>
@@ -31,7 +31,9 @@
         <div class="banner-content">
           <h4 class="banner-hi dark-2">Hi, This is</h4>
           <h1 class="banner-title dark-1">Md. Sabbir </h1>
-          <p class="banner-description dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+          <div>
+            <p class="banner-description dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+          </div>
           <div class="banner-gap">
           <button class="btn-primary "><i class="fa-solid fa-download"></i> Download CV</button>
           <button class="btn-contact"><i class="fa-solid fa-phone-volume"></i>  Contact</button>
@@ -44,8 +46,8 @@
 
     </header>
     <main>
-      <!-- About section are from there -->
-      <section class="about mainclass hide">
+<!-- About section are from there -->
+      <section class="about mainclass ">
         <div class="about-details">
          <div class="about-div">
            <h3  class="about-title">About Me</h3>
@@ -75,7 +77,7 @@
         </div>
       </section>
 
-      <!-- list Section and also a card profile -->
+<!-- list Section and also a card profile -->
 
       <section class="card ">
         <div class="card-header">
