--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="banner-content">
           <h4 class="banner-hi dark-2">Hi, This is</h4>
           <h1 class="banner-title dark-1">Md. Sabbir </h1>
-          <div>
-            <p class="banner-description dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+          <div class="banner-description dark-3">
+            <p >Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
           </div>
           <div class="banner-gap">
           <button class="btn-primary "><i class="fa-solid fa-download"></i> Download CV</button>
